--- a/package.json
+++ b/package.json
@@ -4,20 +4,32 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_PATH=src/ nodemon src/index.ts --exec babel-node -- --extensions .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build:live",
     "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "7.0.0-rc.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/node": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/preset-typescript": "^7.0.0-rc.1",
+    "@types/express": "^4.16.0",
     "@types/node": "^10.7.0",
+    "@types/node-dir": "^0.0.32",
+    "babel-core": "^7.0.0-0",
     "nodemon": "^1.18.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "dataloader": "^1.4.0"
+    "apollo-server-express": "^2.0.4",
+    "dataloader": "^1.4.0",
+    "express": "^4.16.3",
+    "graphql": "^0.13.2",
+    "node-dir": "^0.1.17"
   }
 }
