--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/node": "^10.7.0",
     "@types/node-dir": "^0.0.32",
     "babel-core": "^7.0.0-0",
+    "graphql-code-generator": "^0.11.0",
+    "graphql-codegen-typescript-template": "^0.11.0",
     "nodemon": "^1.18.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
