--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^10.7.0",
-    "@types/request-promise": "^4.1.42",
+    "@types/request-promise-native": "^1.0.15",
     "nodemon": "^1.18.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
@@ -21,6 +21,6 @@
   "dependencies": {
     "dataloader": "^1.4.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise-native": "^1.0.5"
   }
 }
